--- a/Pages/Shared/_Navbar.cshtml
+++ b/Pages/Shared/_Navbar.cshtml
@@ -42,7 +42,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="productDropdown">
                         <li><a class="dropdown-item" href="/Product/List">Product List</a></li>
-                       @*  <li><a class="dropdown-item" href="/Product/Details">Product Details</a></li> *@
+                         <li><a class="dropdown-item" href="/Product/Details">Product Details</a></li> 
                     </ul>
                 </li>
 
