add checkout and cart ındex

--- a/Pages/Cart/Index.cshtml
+++ b/Pages/Cart/Index.cshtml
@@ -58,7 +58,7 @@
 
         <!-- Ödeme İşlemi -->
         <div class="cart-checkout">
-            <a href="/Checkout" class="btn btn-success">Proceed to Checkout</a>
+            <a href="/Order/Checkout" class="btn btn-success">Proceed to Checkout</a>
         </div>
     }
 </div>
